<resources>

    <string name="app_name">PhantomRunner</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Phantom Runner</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_instructions">Instructions</string>
    <string name="menu_unlocks">Unlocks</string>
    <string name="menu_run">Run</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_challenge">Challenge</string>
    <string name="menu_logs">Logs</string>
    <string name="item_selected">Highlights</string>
    <string name="on_pause">Pause</string>
    <string name="stop_string">Stop</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_input">UserInput</string>
    <string name="clock">00:00</string>
    <string name="distance_run">0 ft </string>
    <string name="current_speed">0 fpm</string>
    <string name="title_activity_run_log">RunLogActivity</string>

</resources>